--- a/app/src/main/res/layout/profile_admin_section.xml
+++ b/app/src/main/res/layout/profile_admin_section.xml
@@ -70,4 +70,43 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintTop_toBottomOf="@+id/btn_viewProfile" />
+    <LinearLayout
+        android:id="@+id/layout_adminProfile"
+        android:background="@drawable/custom_card_view_drawable"
+        android:layout_margin="@dimen/_10sdp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:orientation="horizontal"
+        android:paddingStart="@dimen/_15sdp"
+        android:paddingTop="@dimen/_5sdp"
+        android:paddingEnd="@dimen/_15sdp"
+        android:paddingBottom="@dimen/_5sdp"
+        app:layout_constraintTop_toBottomOf="@id/divider_profile">
+        <Button
+            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#1ACFCFCF"
+            android:clickable="false"
+            app:icon="@drawable/ic_profile_avatar"
+            app:iconTint="@android:color/black" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Your profile"
+            android:paddingStart="@dimen/_10sdp"
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_forward_settings"
+            android:layout_gravity="center"
+            app:tint="@color/md_theme_primary"
+            />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
