--- a/app/src/main/res/layout/profile_patient_section.xml
+++ b/app/src/main/res/layout/profile_patient_section.xml
@@ -65,7 +65,7 @@
         />
 
     <LinearLayout
-        android:id="@+id/layout_adminControl"
+        android:id="@+id/layout_patientProfile"
         android:background="@drawable/custom_card_view_drawable"
         android:layout_margin="@dimen/_10sdp"
         android:layout_width="match_parent"
