--- a/app/src/main/res/layout/profile_doctor_section.xml
+++ b/app/src/main/res/layout/profile_doctor_section.xml
@@ -4,17 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-<TextView
-    android:id="@+id/tv_doctorBanner"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:text="Doctor"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:textAlignment="center"
-    android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
-    />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_profile"
         android:layout_width="@dimen/_50sdp"
@@ -29,7 +19,7 @@
         app:civ_border_color="@color/md_theme_primary_mediumContrast"
         app:civ_border_width="@dimen/_1sdp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_doctorBanner"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="VectorDrawableCompat" />
     <TextView
         android:id="@+id/tv_doctorName"
@@ -45,7 +35,7 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginStart="4dp"
-        android:src="@drawable/ic_verified"
+        android:src="@drawable/ic_verified_filled"
         android:contentDescription="Verified email"
         android:visibility="visible"
         app:tint="@color/md_theme_primary"
@@ -65,7 +55,7 @@
         app:layout_constraintStart_toEndOf="@+id/img_profile"
         app:layout_constraintTop_toBottomOf="@+id/tv_doctorName" />
     <TextView
-        android:id="@+id/btn_viewProfile"
+        android:id="@+id/tv_email"
         android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
         android:layout_width="0dp"
         android:textColor="@android:color/darker_gray"
@@ -76,12 +66,124 @@
         app:layout_constraintStart_toStartOf="@+id/tv_specialization"
 
         />
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/guideLine_basicInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="img_profile,tv_email"
+        />
+    <LinearLayout
+        android:id="@+id/layout_appointment"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/_15sdp"
+        android:paddingTop="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_15sdp"
+        android:paddingBottom="@dimen/_10sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideLine_basicInfo"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="10"
+            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your patients"
+            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+            android:textColor="@android:color/darker_gray"
+            />
+
+    </LinearLayout>
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider_appointment"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/_10sdp"
+        app:layout_constraintStart_toEndOf="@id/layout_appointment"
+        app:layout_constraintTop_toTopOf="@id/layout_appointment"
+        app:layout_constraintBottom_toBottomOf="@id/layout_appointment"
+        />
+    <LinearLayout
+        android:id="@+id/layout_reviews"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/_15sdp"
+        android:paddingTop="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_15sdp"
+        android:paddingBottom="@dimen/_10sdp"
+        app:layout_constraintStart_toEndOf="@+id/divider_appointment"
+        app:layout_constraintTop_toBottomOf="@id/guideLine_basicInfo"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100"
+            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your reviews"
+            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+            android:textColor="@android:color/darker_gray"
+            />
+
+    </LinearLayout>
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider_reviews"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/_10sdp"
+        app:layout_constraintStart_toEndOf="@id/layout_reviews"
+        app:layout_constraintTop_toTopOf="@id/layout_reviews"
+        app:layout_constraintBottom_toBottomOf="@id/layout_reviews"
+        />
+    <LinearLayout
+        android:id="@+id/layout_ratings"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/_15sdp"
+        android:paddingTop="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_10sdp"
+        android:paddingBottom="@dimen/_10sdp"
+        app:layout_constraintStart_toEndOf="@+id/divider_reviews"
+        app:layout_constraintTop_toBottomOf="@id/guideLine_basicInfo"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4.5"
+            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Average ratings"
+            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+            android:textColor="@android:color/darker_gray"
+            />
+
+    </LinearLayout>
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/divider_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_15sdp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_viewProfile" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_appointment" />
     <LinearLayout
         android:id="@+id/layout_doctorProfile"
         android:background="@drawable/custom_card_view_drawable"
