--- a/app/src/main/res/layout/profile_doctor_section.xml
+++ b/app/src/main/res/layout/profile_doctor_section.xml
@@ -27,7 +27,7 @@
         android:textStyle="bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/_10sdp"
+        android:paddingStart="@dimen/_15sdp"
         android:text="Azharul Islam"
         app:layout_constraintStart_toEndOf="@+id/img_profile"
         app:layout_constraintTop_toTopOf="@+id/img_profile" />
@@ -50,7 +50,7 @@
         android:textColor="@android:color/darker_gray"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/_10sdp"
-        android:paddingStart="@dimen/_10sdp"
+        android:paddingStart="@dimen/_15sdp"
         android:text="Cardiologist "
         app:layout_constraintStart_toEndOf="@+id/img_profile"
         app:layout_constraintTop_toBottomOf="@+id/tv_doctorName" />
@@ -61,13 +61,13 @@
         android:textColor="@android:color/darker_gray"
         android:layout_height="wrap_content"
         android:text="azad...@gmail.com"
-        android:paddingStart="@dimen/_10sdp"
+        android:paddingStart="@dimen/_15sdp"
         app:layout_constraintTop_toBottomOf="@+id/tv_specialization"
         app:layout_constraintStart_toStartOf="@+id/tv_specialization"
 
         />
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/guideLine_basicInfo"
+        android:id="@+id/barrier_basicInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
@@ -79,11 +79,13 @@
         android:orientation="vertical"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_10sdp"
+        android:paddingTop="@dimen/_20sdp"
         android:paddingEnd="@dimen/_15sdp"
         android:paddingBottom="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideLine_basicInfo"
+        app:layout_constraintTop_toBottomOf="@id/barrier_basicInfo"
+        app:layout_constraintEnd_toStartOf="@+id/layout_reviews"
+        app:layout_constraintHorizontal_chainStyle="spread"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -106,7 +108,8 @@
         android:id="@+id/divider_appointment"
         android:layout_width="1dp"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintStart_toEndOf="@id/layout_appointment"
         app:layout_constraintTop_toTopOf="@id/layout_appointment"
         app:layout_constraintBottom_toBottomOf="@id/layout_appointment"
@@ -117,11 +120,12 @@
         android:orientation="vertical"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_10sdp"
+        android:paddingTop="@dimen/_20sdp"
         android:paddingEnd="@dimen/_15sdp"
         android:paddingBottom="@dimen/_10sdp"
-        app:layout_constraintStart_toEndOf="@+id/divider_appointment"
-        app:layout_constraintTop_toBottomOf="@id/guideLine_basicInfo"
+        app:layout_constraintStart_toEndOf="@+id/layout_appointment"
+        app:layout_constraintTop_toBottomOf="@id/barrier_basicInfo"
+        app:layout_constraintEnd_toStartOf="@+id/layout_ratings"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -144,7 +148,8 @@
         android:id="@+id/divider_reviews"
         android:layout_width="1dp"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintStart_toEndOf="@id/layout_reviews"
         app:layout_constraintTop_toTopOf="@id/layout_reviews"
         app:layout_constraintBottom_toBottomOf="@id/layout_reviews"
@@ -155,11 +160,11 @@
         android:orientation="vertical"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/_15sdp"
-        android:paddingTop="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_10sdp"
+        android:paddingTop="@dimen/_20sdp"
         android:paddingBottom="@dimen/_10sdp"
-        app:layout_constraintStart_toEndOf="@+id/divider_reviews"
-        app:layout_constraintTop_toBottomOf="@id/guideLine_basicInfo"
+        app:layout_constraintStart_toEndOf="@+id/layout_reviews"
+        app:layout_constraintTop_toBottomOf="@id/barrier_basicInfo"
+        app:layout_constraintEnd_toEndOf="parent"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -178,12 +183,14 @@
             />
 
     </LinearLayout>
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/divider_profile"
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier_profile"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="layout_appointment"
         android:layout_marginTop="@dimen/_15sdp"
-        app:layout_constraintTop_toBottomOf="@+id/layout_appointment" />
+       />
     <LinearLayout
         android:id="@+id/layout_doctorProfile"
         android:background="@drawable/custom_card_view_drawable"
@@ -197,7 +204,7 @@
         android:paddingTop="@dimen/_5sdp"
         android:paddingEnd="@dimen/_15sdp"
         android:paddingBottom="@dimen/_5sdp"
-        app:layout_constraintTop_toBottomOf="@id/divider_profile">
+        app:layout_constraintTop_toBottomOf="@id/barrier_profile">
         <Button
             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
             android:layout_width="wrap_content"
@@ -213,8 +220,6 @@
             android:text="Your profile"
             android:paddingStart="@dimen/_10sdp"
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
-
-
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
