Patient profile and Admin profile status ui done

--- a/app/src/main/res/layout/profile_admin_section.xml
+++ b/app/src/main/res/layout/profile_admin_section.xml
@@ -4,18 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-<TextView
-    android:id="@+id/tv_adminBanner"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_margin="@dimen/_20sdp"
-    android:text="Admin"
-    android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
-    android:textAlignment="center"
-    />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_profile"
         android:layout_width="@dimen/_48sdp"
@@ -30,46 +19,50 @@
         app:civ_border_color="@color/md_theme_primary_mediumContrast"
         app:civ_border_width="@dimen/_1sdp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_adminBanner"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="VectorDrawableCompat" />
     <TextView
-        android:id="@+id/tv_profileName"
+        android:id="@+id/tv_adminName"
         android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/_10sdp"
-        android:text="Azharul Islam"
-        android:drawableEnd="@drawable/ic_verified_profile"
-        android:drawableTint="@color/colorMediTrust"
-        android:drawablePadding="@dimen/_10sdp"
+        tools:text="Azharul Islam"
         app:layout_constraintStart_toEndOf="@+id/img_profile"
-        app:layout_constraintTop_toTopOf="@+id/img_profile" />
+        app:layout_constraintTop_toTopOf="@+id/img_profile"
+        android:layout_marginTop="@dimen/_5sdp"
+        />
+    <ImageView
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginStart="4dp"
+        android:src="@drawable/ic_verified_filled"
+        android:contentDescription="Verified email"
+        android:visibility="visible"
+        app:tint="@color/md_theme_primary"
+        app:layout_constraintTop_toTopOf="@id/tv_adminName"
+        app:layout_constraintBottom_toBottomOf="@id/tv_adminName"
+        app:layout_constraintStart_toEndOf="@id/tv_adminName"
+        />
+
     <TextView
         android:id="@+id/tv_profileTypeName"
-        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
         android:layout_width="0dp"
+        android:textColor="@android:color/darker_gray"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/_10sdp"
         android:paddingStart="@dimen/_10sdp"
-        android:text="Cardiologist "
+        tools:text="azad...@gmail.com"
         app:layout_constraintStart_toEndOf="@+id/img_profile"
-        app:layout_constraintTop_toBottomOf="@+id/tv_profileName" />
-    <Button
-        android:id="@+id/btn_viewProfile"
-        style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_adminName" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier_profile"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View profile"
-        app:layout_constraintTop_toBottomOf="@+id/tv_profileTypeName"
-        app:layout_constraintStart_toStartOf="@+id/tv_profileTypeName"
-        android:paddingTop="10dp"
-        />
-    <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/divider_profile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_15sdp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_viewProfile" />
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="img_profile" />
     <LinearLayout
         android:id="@+id/layout_adminProfile"
         android:background="@drawable/custom_card_view_drawable"
@@ -83,7 +76,7 @@
         android:paddingTop="@dimen/_5sdp"
         android:paddingEnd="@dimen/_15sdp"
         android:paddingBottom="@dimen/_5sdp"
-        app:layout_constraintTop_toBottomOf="@id/divider_profile">
+        app:layout_constraintTop_toBottomOf="@id/barrier_profile">
         <Button
             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
             android:layout_width="wrap_content"
