--- a/app/src/main/res/layout/profile_verification_section.xml
+++ b/app/src/main/res/layout/profile_verification_section.xml
@@ -63,9 +63,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:text="Congratulations! Your profile has been successfully activated and is now visible to patients. Start connecting with patients and providing exceptional care today!"
+                android:text="Your profile is now visible to patients on MediTrust."
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/bar_profileStatus"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bar_profileStatus" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
