--- a/app/src/main/res/layout/profile_admin_section.xml
+++ b/app/src/main/res/layout/profile_admin_section.xml
@@ -36,7 +36,7 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginStart="4dp"
-        android:src="@drawable/ic_verified_filled"
+        android:src="@drawable/ic_admin"
         android:contentDescription="Verified email"
         android:visibility="visible"
         app:tint="@color/md_theme_primary"
@@ -72,7 +72,7 @@
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         android:orientation="horizontal"
-        android:paddingStart="@dimen/_15sdp"
+        android:paddingStart="@dimen/_10sdp"
         android:paddingTop="@dimen/_5sdp"
         android:paddingEnd="@dimen/_15sdp"
         android:paddingBottom="@dimen/_5sdp"
