--- a/app/src/main/res/layout/profile_admin_section.xml
+++ b/app/src/main/res/layout/profile_admin_section.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_profile"
@@ -21,41 +21,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="VectorDrawableCompat" />
+
     <TextView
         android:id="@+id/tv_adminName"
-        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
         android:paddingStart="@dimen/_10sdp"
-        tools:text="Azharul Islam"
+        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
         app:layout_constraintStart_toEndOf="@+id/img_profile"
         app:layout_constraintTop_toTopOf="@+id/img_profile"
-        android:layout_marginTop="@dimen/_5sdp"
-        />
+        tools:text="Azharul Islam" />
+
     <ImageView
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginStart="4dp"
-        android:src="@drawable/ic_admin"
         android:contentDescription="Verified email"
+        android:src="@drawable/ic_admin"
         android:visibility="visible"
-        app:tint="@color/md_theme_primary"
-        app:layout_constraintTop_toTopOf="@id/tv_adminName"
         app:layout_constraintBottom_toBottomOf="@id/tv_adminName"
         app:layout_constraintStart_toEndOf="@id/tv_adminName"
-        />
+        app:layout_constraintTop_toTopOf="@id/tv_adminName"
+        app:tint="@color/md_theme_primary" />
 
     <TextView
         android:id="@+id/tv_profileTypeName"
-        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
         android:layout_width="0dp"
-        android:textColor="@android:color/darker_gray"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/_10sdp"
         android:paddingStart="@dimen/_10sdp"
-        tools:text="azad...@gmail.com"
+        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+        android:textColor="?android:textColorSecondary"
         app:layout_constraintStart_toEndOf="@+id/img_profile"
-        app:layout_constraintTop_toBottomOf="@+id/tv_adminName" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_adminName"
+        tools:text="azad...@gmail.com" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier_profile"
@@ -63,12 +63,13 @@
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="img_profile" />
+
     <LinearLayout
         android:id="@+id/layout_adminProfile"
-        android:background="@drawable/custom_card_view_drawable"
-        android:layout_margin="@dimen/_10sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_10sdp"
+        android:background="@drawable/custom_card_view_drawable"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         android:orientation="horizontal"
@@ -77,6 +78,7 @@
         android:paddingEnd="@dimen/_15sdp"
         android:paddingBottom="@dimen/_5sdp"
         app:layout_constraintTop_toBottomOf="@id/barrier_profile">
+
         <Button
             style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
             android:layout_width="wrap_content"
@@ -85,21 +87,32 @@
             android:clickable="false"
             app:icon="@drawable/ic_profile_avatar"
             app:iconTint="@android:color/black" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Your profile"
             android:paddingStart="@dimen/_10sdp"
-            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
+            android:text="Your profile"
+            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
+            />
 
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_forward_settings"
             android:layout_gravity="center"
-            app:tint="@color/md_theme_primary"
-            />
+            android:src="@drawable/ic_forward_settings"
+            app:tint="@color/md_theme_primary" />
     </LinearLayout>
+
+    <!--Medical Record setup section-->
+    <include
+        android:id="@+id/include_medicalRecordSetup"
+        layout="@layout/admin_medical_record_section" />
+
+    <!--Admin activities setup-->
+    <include
+        android:id="@+id/include_adminSetup"
+        layout="@layout/admin_activities_setup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
