--- a/app/src/main/res/layout/language_setup_section.xml
+++ b/app/src/main/res/layout/language_setup_section.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_constraintTop_toBottomOf="@id/include_adminSetup"
+    app:layout_constraintTop_toBottomOf="@id/include_profileSection"
     >
     <TextView
         android:id="@+id/tv_appLanguage"
