--- a/app/src/main/res/layout/doctor_profile_verification_section.xml
+++ b/app/src/main/res/layout/doctor_profile_verification_section.xml
@@ -5,22 +5,10 @@
     android:layout_height="wrap_content"
     app:layout_constraintTop_toBottomOf="@+id/layout_doctorProfile">
 
-    <TextView
-        android:id="@+id/tv_profileStatus"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:text="Profile Verification &amp; Activation"
-        android:textAllCaps="false"
-        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
-        android:textColor="?attr/colorOnSurfaceVariant"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_profileStatus"
+        android:visibility="gone"
+        android:id="@+id/card_profileRestrict"
         style="@style/Widget.Material3.CardView.Filled"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,8 +16,8 @@
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         android:orientation="horizontal"
-        app:cardBackgroundColor="@color/md_theme_errorContainer"
-        app:layout_constraintTop_toBottomOf="@id/tv_profileStatus">
+        app:cardBackgroundColor="@color/md_theme_tertiaryContainer"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -45,7 +33,7 @@
                 android:layout_weight="1"
                 android:text="Account Status: Restricted"
                 android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-                android:textColor="?attr/colorOnErrorContainer"
+                android:textColor="?attr/colorOnTertiaryContainer"
                 app:layout_constraintStart_toEndOf="@+id/layout_profileStatus"
                 app:layout_constraintTop_toTopOf="@+id/layout_profileStatus"
 
@@ -71,8 +59,8 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/md_theme_onError"
                     android:clickable="false"
-                    app:icon="@drawable/ic_unverified"
-                    app:iconTint="@color/md_theme_error"
+                    app:icon="@drawable/ic_warning"
+                    app:iconTint="@color/md_theme_tertiary"
 
                     />
             </LinearLayout>
@@ -84,10 +72,129 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 android:text="Your profile has been restricted due to a policy violation. Please contact the MediTrust support team for further assistance."
                 android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                android:textColor="?attr/colorOnErrorContainer"
+                android:textColor="?attr/colorOnTertiaryContainer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_statusRate"
                 app:layout_constraintTop_toBottomOf="@+id/tv_statusRate" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:visibility="gone"
+        android:id="@+id/card_profileInComplete"
+        style="@style/Widget.Material3.CardView.Filled"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_10sdp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:orientation="horizontal"
+        app:cardBackgroundColor="@color/md_theme_primaryContainer"
+        app:layout_constraintTop_toBottomOf="@+id/card_profileRestrict">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_10sdp">
+
+            <TextView
+                android:id="@+id/tv_completeRate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:text="Profile Completeness: 70%"
+                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+                android:textColor="@color/md_theme_onPrimaryContainer"
+                app:layout_constraintStart_toEndOf="@+id/bar_profileComplete"
+                app:layout_constraintTop_toTopOf="@+id/bar_profileComplete"
+
+                />
+
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:id="@+id/bar_profileComplete"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:progress="70"
+                app:indicatorColor="@color/md_theme_primary"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_statusReason1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:text="Please complete your profile to proceed with verification."
+                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+                android:textColor="@color/md_theme_onPrimaryContainer"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_completeRate"
+                app:layout_constraintTop_toBottomOf="@+id/tv_completeRate" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:visibility="visible"
+        android:id="@+id/card_profileUnVerified"
+        style="@style/Widget.Material3.CardView.Filled"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_10sdp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:orientation="horizontal"
+        app:cardBackgroundColor="@color/md_theme_errorContainer"
+        app:layout_constraintTop_toBottomOf="@+id/card_profileInComplete">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_10sdp">
+
+            <TextView
+                android:id="@+id/tv_verifiedStatus"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:text="Profile Status: Unverified"
+                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+                android:textColor="@color/md_theme_onErrorContainer"
+                app:layout_constraintStart_toEndOf="@+id/btn_verified"
+                app:layout_constraintTop_toTopOf="@+id/btn_verified"
+
+                />
+
+            <Button
+                android:id="@+id/btn_verified"
+                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/md_theme_onError"
+                android:clickable="false"
+                app:icon="@drawable/ic_unverified"
+                app:iconTint="@color/md_theme_error"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:text="Your profile is under review. Patients cannot see your profile yet."
+                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+                android:textColor="@color/md_theme_onErrorContainer"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_verifiedStatus"
+                app:layout_constraintTop_toBottomOf="@+id/tv_verifiedStatus" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
